--- a/vscode/settings.json
+++ b/vscode/settings.json
@@ -1,4 +1,4 @@
-// The pseudo comments `//` should be removed when this JSON file is used.
+// The unsupported comments `//` should be removed when this JSON file is used.
 // 
 // ~/Library/Application Support/Code/User/settings.json
 {
