--- a/vscode/settings.json
+++ b/vscode/settings.json
@@ -84,6 +84,9 @@
       "quickfix.insertSemicolon.multi": "always",
       "quickfix.organize.imports": "always",
       "quickfix.remove.unusedImport.multi": "always"
-    }
+    },
+    "editor.rulers": [
+      120 // only for my current client work
+    ]
   }
 }
