--- a/vscode/settings.json
+++ b/vscode/settings.json
@@ -77,6 +77,7 @@
   "workbench.settings.editor": "json",
   "workbench.settings.openDefaultSettings": true,
   "workbench.startupEditor": "none",
+  "yaml.format.singleQuote": true,
   // https://dartcode.org/docs/recommended-settings/
   "[dart]": {
     "editor.codeActionsOnSave": {
