Add Git LFS filter configuration to .gitconfig

--- a/git/.gitconfig
+++ b/git/.gitconfig
@@ -14,6 +14,14 @@
     prune = true
     pruneTags = true
     recurseSubmodules = true
+# The configurations below are generated automatically upon installation of GitHub Desktop.
+# https://docs.github.com/en/desktop/configuring-and-customizing-github-desktop/about-git-large-file-storage-and-github-desktop
+# https://git-scm.com/docs/gitattributes#_filter
+[filter "lfs"]
+    clean = git-lfs clean -- %f
+    smudge = git-lfs smudge -- %f
+    process = git-lfs filter-process
+    required = true
 [http]
     emptyAuth = true # prevents "remote: HTTP Basic: Accesss denied" when cloning a repository. https://docs.gitlab.com/ee/integration/kerberos.html#http-basic-access-denied-when-cloning
 [pager]
