--- a/vscode/settings.json
+++ b/vscode/settings.json
@@ -44,6 +44,7 @@
   "files.hotExit": "off",
   "files.insertFinalNewline": true,
   "files.trimTrailingWhitespace": true,
+  "geminicodeassist.agentYoloMode": true,
   "git.allowForcePush": true,
   "git.autofetch": true,
   "git.autoStash": true,
