--- a/vscode/settings.json
+++ b/vscode/settings.json
@@ -77,6 +77,7 @@
   "go.inlayHints.ignoredError": true,
   "go.inlayHints.parameterNames": true,
   "go.inlayHints.rangeVariableTypes": true,
+  "go.lintOnSave": "workspace",
   "html.format.preserveNewLines": false,
   "javascript.inlayHints.functionLikeReturnTypes.enabled": true,
   "javascript.inlayHints.parameterNames.enabled": "all",
