--- a/vscode/settings.json
+++ b/vscode/settings.json
@@ -2,6 +2,10 @@
 // ln -f -s ~/Documents/GitHub/dotfiles/vscode/settings.json "$HOME/Library/Application Support/Code/User/settings.json"
 // ln -f -s ~/Documents/GitHub/dotfiles/vscode/settings.json "$HOME/Library/Application Support/Cursor/User/settings.json"
 {
+  "chat.tools.terminal.autoApprove": {
+    "dart": true,
+    "go": true
+  },
   "dart.flutterGenerateLocalizationsOnSave": "allIfDirty",
   "dart.flutterHotReloadOnSave": "allIfDirty",
   "dart.hotReloadOnSave": "allIfDirty",
@@ -111,14 +115,31 @@
   "yaml.format.singleQuote": true,
   // https://dartcode.org/docs/recommended-settings/
   "[dart]": {
-    "editor.codeActionsOnSave": {
-      "quickfix.insertSemicolon.multi": "always",
-      "quickfix.organize.imports": "always",
-      "quickfix.remove.unusedImport.multi": "always"
-    },
-    "editor.rulers": [80],
+    // Automatically format code on save and during typing of certain characters
+    // (like `;` and `}`).
+    "editor.formatOnSave": true,
+    "editor.formatOnType": true,
+    // Draw a guide line at 80 characters, where Dart's formatting will wrap code.
+    "editor.rulers": [
+      80
+    ],
+    // Disables built-in highlighting of words that match your selection. Without
+    // this, all instances of the selected text will be highlighted, interfering
+    // with Dart's ability to highlight only exact references to the selected variable.
     "editor.selectionHighlight": false,
+    // Allows pressing <TAB> to complete snippets such as `for` even when the
+    // completion list is not visible.
     "editor.tabCompletion": "onlySnippets",
+    // By default, VS Code will populate code completion with words found in the
+    // matching documents when a language service does not provide its own completions.
+    // This results in code completion suggesting words when editing comments and
+    // strings. This setting will prevent that.
     "editor.wordBasedSuggestions": "off"
-  }
+  },
+  "[json]": {
+    "editor.defaultFormatter": "vscode.json-language-features"
+  },
+  "[jsonc]": {
+    "editor.defaultFormatter": "vscode.json-language-features"
+  },
 }
