Remove mac-pasteboard.profile and update VSCode settings

--- a/vscode/settings.json
+++ b/vscode/settings.json
@@ -140,10 +140,13 @@
     // strings. This setting will prevent that.
     "editor.wordBasedSuggestions": "off"
   },
+  "[javascript]": {
+    "editor.defaultFormatter": "vscode.typescript-language-features"
+  },
   "[json]": {
     "editor.defaultFormatter": "vscode.json-language-features"
   },
   "[jsonc]": {
     "editor.defaultFormatter": "vscode.json-language-features"
-  },
+  }
 }
