--- a/vscode/settings.json
+++ b/vscode/settings.json
@@ -11,16 +11,17 @@
   "dart.hotReloadOnSave": "allIfDirty",
   "dart.runPubGetOnNestedProjects": "both",
   "debug.console.historySuggestions": false,
-  "editor.codeActionsOnSave": {
-    "source.fixAll": "always",
-    "source.organizeImports": "always",
-    "source.sortMembers": "always"
-  },
+  // "editor.codeActionsOnSave": {
+  //   "source.fixAll": "always",
+  //   "source.organizeImports": "always",
+  //   "source.sortMembers": "always"
+  // },
   "editor.copyWithSyntaxHighlighting": false,
   "editor.find.globalFindClipboard": true,
   "editor.formatOnPaste": true,
   "editor.formatOnSave": true,
   "editor.formatOnType": true,
+  "editor.guides.bracketPairs": true,
   "editor.minimap.enabled": false,
   "editor.quickSuggestions": {
     "other": false
