--- a/vscode/settings.json
+++ b/vscode/settings.json
@@ -1,4 +1,5 @@
 // How to deploy this file:
+// ln -f -s ~/Documents/GitHub/dotfiles/vscode/settings.json "$HOME/Library/Application Support/Antigravity/User/settings.json"
 // ln -f -s ~/Documents/GitHub/dotfiles/vscode/settings.json "$HOME/Library/Application Support/Code/User/settings.json"
 // ln -f -s ~/Documents/GitHub/dotfiles/vscode/settings.json "$HOME/Library/Application Support/Cursor/User/settings.json"
 {
@@ -47,8 +48,6 @@
   "files.hotExit": "off",
   "files.insertFinalNewline": true,
   "files.trimTrailingWhitespace": true,
-  "geminicodeassist.agentYoloMode": true,
-  "geminicodeassist.enableTelemetry": false,
   "git.allowForcePush": true,
   "git.autofetch": true,
   "git.autoStash": true,
