--- a/vscode/settings.json
+++ b/vscode/settings.json
@@ -49,12 +49,14 @@
   "files.insertFinalNewline": true,
   "files.trimTrailingWhitespace": true,
   "git.allowForcePush": true,
+  "git.allowNoVerifyCommit": true,
   "git.autofetch": true,
   "git.autoStash": true,
   "git.confirmSync": false,
   "git.enableSmartCommit": true,
   "git.fetchOnPull": true,
   "git.followTagsWhenSync": true,
+  "git.postCommitCommand": "sync",
   "git.pruneOnFetch": true,
   "git.pullBeforeCheckout": true,
   "git.rebaseWhenSync": true,
