--- a/vscode/settings.json
+++ b/vscode/settings.json
@@ -52,6 +52,9 @@
   "git.allowNoVerifyCommit": true,
   "git.autofetch": true,
   "git.autoStash": true,
+  "git.confirmEmptyCommits": false,
+  "git.confirmForcePush": false,
+  "git.confirmNoVerifyCommit": false,
   "git.confirmSync": false,
   "git.enableSmartCommit": true,
   "git.fetchOnPull": true,
