--- a/vscode/settings.json
+++ b/vscode/settings.json
@@ -148,5 +148,8 @@
     // This results in code completion suggesting words when editing comments and
     // strings. This setting will prevent that.
     "editor.wordBasedSuggestions": "off"
+  },
+  "[javascript]": {
+    "editor.defaultFormatter": "vscode.typescript-language-features"
   }
 }
