--- a/git/.gitconfig
+++ b/git/.gitconfig
@@ -56,7 +56,7 @@
     md = merge develop --no-edit
     mt = mergetool
     pf = push --force-with-lease --force-if-includes
-    pop = git stash pop
+    pop = stash pop
     pus = stash push --include-untracked # `push` cannot be used as an alias because it is a built-in command.
     r = rebase
     ra = rebase --abort
