--- a/git/.gitconfig
+++ b/git/.gitconfig
@@ -57,7 +57,6 @@
     mt = mergetool
     pf = push --force-with-lease --force-if-includes
     pop = stash pop
-    pus = stash push --include-untracked # `push` cannot be used as an alias because it is a built-in command.
     r = rebase
     ra = rebase --abort
     rc = rebase --continue
@@ -68,7 +67,7 @@
     rsh = reset --hard HEAD~
     rsh2 = reset --hard HEAD~2
     rsh3 = reset --hard HEAD~3
-    st = stash
+    st = stash push --include-untracked # `push` cannot be used as an alias because it is
     sw = switch
 # The configurations below are generated automatically upon installation of GitHub Desktop.
 # https://docs.github.com/en/desktop/configuring-and-customizing-github-desktop/about-git-large-file-storage-and-github-desktop
