Disable terminal and command palette history

--- a/vscode/settings.json
+++ b/vscode/settings.json
@@ -106,6 +106,7 @@
   "telemetry.feedback.enabled": false,
   "telemetry.telemetryLevel": "off",
   "terminal.integrated.enablePersistentSessions": false,
+  "terminal.integrated.shellIntegration.history": 0,
   "typescript.inlayHints.enumMemberValues.enabled": true,
   "typescript.inlayHints.functionLikeReturnTypes.enabled": true,
   "typescript.inlayHints.parameterNames.enabled": "all",
@@ -116,6 +117,7 @@
   "typescript.suggest.completeFunctionCalls": true,
   "window.nativeTabs": true,
   "window.restoreWindows": "none",
+  "workbench.commandPalette.history": 0,
   "workbench.editor.closeOnFileDelete": true,
   "workbench.editor.restoreViewState": false,
   "workbench.settings.editor": "json",
